# ai-lesson

./: pyproject.toml
cv2.0/granica/: MV16 Выделение границ.ipynb
cv2.0/opencv/: readme.md
cv2.0/геометрические формы/: MV18 Геометрические фигуры.ipynb
cv2.0/контуры/: MV17 Контуры и ориентация.ipynb
lesson1 fashion mnist ml/: test-fashon.ipynb
lesson2 text analize ml/: text.ipynb
lesson3 computer_vision/: MV01 Работа с изображениями.ipynb  MV02 LeNet для MNIST.ipynb  MV03 AlexNet для MNIST.ipynb  MV04 Перенос обучения.ipynb  MV06 Размножение изображений.ipynb  MV07 Оптимизация нейросети.ipynb  MV08 Функции оптимизации.ipynb  MV10 Преобразование изображений.ipynb  MV11 Коррекция изображений.ipynb  MV12 Загрузка изображений.ipynb
